Add small fixes to single-page

--- a/single-page/source/resume.tex
+++ b/single-page/source/resume.tex
@@ -14,7 +14,7 @@
 \namesection{Leon}{Overweel}{
     \urlstyle{same}\url{leonoverweel.com} |
     \href{mailto:l.overweel@gmail.com}{l.overweel@gmail.com} |
-    +65 8336 5466
+    +65 8336 5466 | +31 6 1215 9303
 }
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -196,7 +196,7 @@ Full CV: \href{https://leonoverweel.github.io/resume/}{\custombold{leonoverweel.
 
 \section{Personal Projects}
 
-All project titles link to more info! More (older) projects here: \href{http://leonoverweel.com/}{\custombold{leonoverweel.com}}
+All project titles link to more info! More projects here: \href{http://leonoverweel.com/}{\custombold{leonoverweel.com}}
 
 \begin{tightemize}
     \item \href{http://hackathonlist.nl/}{\custombold{Dutch Hackathon List}} (2017): Collaboratively building the most comprehensive list of upcoming hackathons in the Netherlands.
@@ -212,12 +212,12 @@ All project titles link to more info! More (older) projects here: \href{http://l
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \section{Awards} 
-\begin{tabular}{rll}
-2017    & T500: Most Talented Under-25s in Digital  & The Next Web\\
-2015    & 1st Place: The Overall Best WPH Idea      & World Port Hackathon\\
-2015    & 3rd Place: Google API Prize               & Hack the North\\
-2015    & National AP Scholar Award                 & The College Board\\
-2014    & University of Pennsylvania Book Award     & Rye High School\\
+\begin{tabular}{lll}
+2017 (NL)   & T500: Most Talented Under-25s in Digital  & The Next Web\\
+2015 (NL)   & 1st Place: The Overall Best WPH Idea      & World Port Hackathon\\
+2015 (CA)   & 3rd Place: Google API Prize               & Hack the North\\
+2015 (US)   & National AP Scholar Award                 & The College Board\\
+2014 (US)   & University of Pennsylvania Book Award     & Rye High School\\
 \end{tabular}
 \sectionsep
 
