--- a/single-page/source/resume.tex
+++ b/single-page/source/resume.tex
@@ -105,6 +105,7 @@ Full CV: \href{https://leonoverweel.github.io/resume/}{\custombold{leonoverweel.
     \item Software Quality \& Testing\
     \item Software Engineering Methods
     \item Concept of Programming Languages
+    \item Contextproject
 \end{tightemize}
 \vspace{0.8\topsep}
 \end{small}
