Add Matlab and Boostrap tech skills

--- a/single-page/source/resume.tex
+++ b/single-page/source/resume.tex
@@ -231,9 +231,9 @@ All project titles link to more info! More projects here: \href{http://leonoverw
 \begin{tabulary}{\linewidth}{LLLL}
     & \custombold{Languages} & \custombold{Platforms + APIs} & \custombold{Tools} \\
     \hline
-    \custombold{Working knowledge} & Python, Java, JavaScript, SQL, C++ & Flask, App Engine, OpenAPI, Linux, nginx, Docker Compose, Spotify, Reddit  & Git, GitHub, IntelliJ, PyCharm \\
+    \custombold{Working knowledge} & Python, Java, JavaScript, SQL, Matlab & Flask, App Engine, OpenAPI, Bootstrap, Linux, nginx, Docker Compose, Spotify, Reddit  & Git, GitHub, IntelliJ, PyCharm \\
     \hline
-    \custombold{Basic knowledge} & Assembly, Prolog & Java Spark, RobotOS, Mindstorms NXT & Visual Studio \\
+    \custombold{Basic knowledge} & C++, Assembly, Prolog & Java Spark, RobotOS, Mindstorms NXT & Visual Studio \\
 \end{tabulary} 
 
 \end{minipage} 
