Remove Singapore number from single page resume
Also fix hypehenation in 'Working knowledge'

--- a/single-page/source/resume.tex
+++ b/single-page/source/resume.tex
@@ -4,7 +4,7 @@
 
 \begin{document}
 
-\hyphenation{knowledge}
+\hyphenation{knowledge, working}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
@@ -13,8 +13,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \namesection{Leon}{Overweel}{
     \urlstyle{same}\url{leonoverweel.com} |
-    \href{mailto:l.overweel@gmail.com}{l.overweel@gmail.com} |
-    +65 8336 5466 | +31 6 1215 9303
+    \href{mailto:l.overweel@gmail.com}{l.overweel@gmail.com} | +31 6 1215 9303
 }
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
