Remove minor warnings from .tex file

--- a/single-page/source/resume.tex
+++ b/single-page/source/resume.tex
@@ -4,7 +4,7 @@
 
 \begin{document}
 
-\hyphenation{knowledge, working}
+\hyphenation{knowledge working}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
@@ -28,7 +28,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Education} 
 
-\subsection{Delft University of \\Technology}
+\subsection{Delft University of \texorpdfstring{\newline} Technology}
 \descript{BSc Computer Science and Engineering}
 \location{Expected August 2018 | Delft, NL}
 \vspace{\topsep}
