Update single-page resume for August 2018

--- a/single-page/source/resume.tex
+++ b/single-page/source/resume.tex
@@ -4,7 +4,7 @@
 
 \begin{document}
 
-\hyphenation{knowledge working}
+\hyphenation{knowledge working edinburgh technology experience}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
@@ -28,20 +28,26 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Education} 
 
-\subsection{Delft University of \texorpdfstring{\newline} Technology}
+\subsection{University of Edinburgh}
+\descript{MSc Artificial Intelligence}
+\location{Starting Sept. 2018 | Edinburgh, UK}
+\vspace{\topsep}
+
+\subsection{Delft University of \newline Technology}
 \descript{BSc Computer Science and Engineering}
-\location{Expected August 2018 | Delft, NL}
+\location{2015 - 2018 | Delft, NL}
 \vspace{\topsep}
 \begin{tightemize}
-    \item Honours Programme (early start)
-    \item 3rd in class freshman year
-    \item Semester at NUS, Singapore
+    \item Graduated cum laude
+    \item Completed the Honours Programme
+    \item Studied abroad at the National University of Singapore
 \end{tightemize}
-\location{ GPA: 8.6 / 10 }
+\location{8.6 / 10 final GPA}
+\location{9.0 / 10 BSc thesis}
 \vspace{\topsep}
 
 \subsection{Rye High School}
-\location{Graduated June 2015 | Rye, NY}
+\location{2011 - 2015 | Rye, NY}
 \sectionsep
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -62,74 +68,56 @@ Full CV: \href{https://leonoverweel.github.io/resume/}{\custombold{leonoverweel.
 \section{Coursework}
 \custombold{Intelligence Systems:}
 \begin{small}
-\vspace{0.6\topsep}
-\begin{tightemize}
-    \item Logic Based Artificial Intelligence
-    \item Multi-Agent Systems Project
-    \item Signal + Image Processing
-    \item Multimedia Analysis (CM)
-    \item Machine Learning
-    \item Natural Language Processing
-\end{tightemize}
+Logic-Based Artificial Intelligence \textbullet \
+Multi-Agent Systems Project \textbullet \
+Signal + Image Processing \textbullet \
+Multimedia Analysis (CM) \textbullet \
+Machine Learning \textbullet \
+Natural Language Processing
 \vspace{0.8\topsep}
 \end{small}
 
 \custombold{Computer Systems:}
 \begin{small}
-\vspace{0.6\topsep}
-\begin{tightemize}
-    \item Computer Organization (TA, CM)
-    \item Computer Networks
-\end{tightemize}
+Computer Organization (TA, CM) \textbullet \
+Computer Networks
 \vspace{0.8\topsep}
 \end{small}
 
 \custombold{Information Systems:}
 \begin{small}
-\vspace{0.6\topsep}
-\begin{tightemize}
-    \item Web \& Database Technology (CM)
-    \item Information \& Data Modeling
-    \item Computer Security
-\end{tightemize}
+Web \& Database Technology (CM) \textbullet \
+Information \& Data Modeling \textbullet \
+Computer Security
 \vspace{0.8\topsep}
 \end{small}
 
 \custombold{Software Development:}
 \begin{small}
-\vspace{0.6\topsep}
-\begin{tightemize}
-    \item Object Oriented Programming + Project
-    \item Algorithms \& Data Structures (CM)
-    \item Software Quality \& Testing\
-    \item Software Engineering Methods
-    \item Concept of Programming Languages
-    \item Contextproject
-\end{tightemize}
+Object Oriented Programming + Project \textbullet \
+Algorithms \& Data Structures (CM) \textbullet \
+Software Quality \& Testing \textbullet \
+Software Engineering Methods \textbullet \
+Concept of Programming Languages \textbullet \
+Contextproject
 \vspace{0.8\topsep}
 \end{small}
 
 \custombold{Fundamentals:}
 \begin{small}
-\vspace{0.6\topsep}
-\begin{tightemize}
-    \item Reasoning and Logic (CM)
-    \item Algorithm Design
-    \item Automata, Languages \& Computability
-    \item Optimization Algorithms
-\end{tightemize}
+Reasoning and Logic (CM) \textbullet \
+Algorithm Design \textbullet \
+Automata, Languages \& Computability \textbullet \
+Optimization Algorithms
 \vspace{0.8\topsep}
 \end{small}
 
 \custombold{Math \& Modeling:}
 \begin{small}
-\vspace{0.6\topsep}
-\begin{tightemize}
-    \item Computer Graphics
-    \item Calculus (CM)
-    \item Linear Algebra (TA, CM)
-    \item Probability Theory \& Statistics
-\end{tightemize}
+Computer Graphics \textbullet \
+Calculus (CM) \textbullet \
+Linear Algebra (TA, CM) \textbullet \
+Probability Theory \& Statistics
 \vspace{0.8\topsep}
 \end{small}
 
@@ -153,15 +141,25 @@ Full CV: \href{https://leonoverweel.github.io/resume/}{\custombold{leonoverweel.
 
 \section{Industry and Research Experience}
 
-\runsubsection{@Large Research}
-\descript{| OpenDC Product Lead }
-\location{June 2016 – June 2017 | Delft, NL}
+\runsubsection{ING Bank}
+\descript{| Software Engineering Intern }
+\location{April 2018 – July 2018 | Amsterdam, NL}
 \vspace{\topsep}
 \begin{tightemize}
-    \item Worked in the \href{https://atlarge-research.com/}{\custombold{@Large Research}} group to build \href{https://opendc.ewi.tudelft.nl/}{\custombold{OpenDC}}: a free, open-source datacenter simulator for research and undergraduate education.
-    \item Leadership resp's: sprint planning, conference talks, roadmap management.
-    \item Engineering resp's: database + API design, web server development.
-    \item Vision paper published at ISPDC-2017, which I presented at CompSys-2017 and ICT.OPEN2017.
+    \item Worked in a four-student team to create Mapp, an internal tool for customer journey mapping at \href{https://www.ing.com/}{\custombold{ING}}, as our BSc graduation project.
+    \item Focused on finding product-market fit by shipping the Java + Polymer web app in two-week sprints and getting user feedback constantly.
+    \item Users love Mapp and we are working to deploy the app throughout ING.
+\end{tightemize}
+\vspace{0.5\topsep}
+
+\runsubsection{@Large Research}
+\descript{| OpenDC Product Lead; Student Researcher }
+\location{June 2016 – July 2018 | Delft, NL}
+\begin{tightemize}
+    \item Worked in the \href{https://atlarge-research.com/}{\custombold{@Large Research}} group to build \href{https://opendc.ewi.tudelft.nl/}{\custombold{OpenDC}}: a free, open-source datacenter simulator for research and university-level education.
+    \item Leadership resp's: sprint planning, conference talks, and teaching classes.
+    \item Engineering resp's: database + API design and Python web server development.
+    \item Post-Product Lead, I ran a nine-month study of cloud provider availability.
 \end{tightemize}
 \vspace{0.5\topsep}
 
@@ -180,15 +178,6 @@ Full CV: \href{https://leonoverweel.github.io/resume/}{\custombold{leonoverweel.
 \begin{tightemize}
     \item Full stack developed the \href{http://mugsy.tv/}{\custombold{Mugsy website}} with a custom CMS to add, edit, and remove multiple types of content pages.
 \end{tightemize}
-\vspace{0.5\topsep}
-
-\runsubsection{TU Delft}
-\descript{| Robotics \& Software Engineering Intern }
-\location{June 2014 – July 2014 | Delft, NL}
-\begin{tightemize}
-    \item Developed a Robot-OS-based GUI for TU Delft's 3mxl PCB that allows users to edit robots' motor parameters and share defaults across devices.
-\end{tightemize}
-\vspace{0.5\topsep}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %     PROJECTS
@@ -202,10 +191,8 @@ All project titles link to more info! More projects here: \href{http://leonoverw
     \item \href{http://hackathonlist.nl/}{\custombold{Dutch Hackathon List}} (2017): Collaboratively building the most comprehensive list of upcoming hackathons in the Netherlands.
     \item \href{http://leonoverweel.com/world-port-hackathon-2016}{\custombold{PassPort}} (2016): Blockchain app to detect smuggling in freight containers; 1st-place at World Port Hackathon; presented at I Am Blockchain and BECON conferences; extended into 10-week project at TU Delft.
     \item \href{http://leonoverweel.com/intersect.ninja}{\custombold{Intersect.Ninja}} (2015): Find intersections in the artists and songs different people like, based on their public Spotify playlists.
-    \item \href{http://leonoverweel.com/arc-spin}{\custombold{Arc Spin}} (2015): Mobile and desktop browser game.
     \item \href{http://leonoverweel.com/link-syncer}{\custombold{Link Syncer}} (2015): Shareable links that redirect once everyone has clicked. \item \href{http://leonoverweel.com/reddit-weekly}{\custombold{Reddit Weekly}} (2015): Customizable weekly summary emails for subreddits.
 \end{tightemize}
-\sectionsep
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %     AWARDS
@@ -213,13 +200,13 @@ All project titles link to more info! More projects here: \href{http://leonoverw
 
 \section{Awards} 
 \begin{tabular}{lll}
-2017 (NL)   & T500: Most Talented Under-25s in Digital  & The Next Web\\
+2017, 18 (NL)   & T500: Most Talented Under-25s in Digital  & The Next Web\\
 2015 (NL)   & 1st Place: The Overall Best WPH Idea      & World Port Hackathon\\
 2015 (CA)   & 3rd Place: Google API Prize               & Hack the North\\
 2015 (US)   & National AP Scholar Award                 & The College Board\\
 2014 (US)   & University of Pennsylvania Book Award     & Rye High School\\
 \end{tabular}
-\sectionsep
+\vspace{0.1\topsep}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %     SKILLS
@@ -228,11 +215,11 @@ All project titles link to more info! More projects here: \href{http://leonoverw
 \section{Technical Skills}
 \vspace{-\topsep}
 \begin{tabulary}{\linewidth}{LLLL}
-    & \custombold{Languages} & \custombold{Platforms + APIs} & \custombold{Tools} \\
+    & \custombold{Languages} & \custombold{Platforms} & \custombold{Tools} \\
     \hline
-    \custombold{Working knowledge} & Python, Java, JavaScript, SQL, Matlab & Flask, App Engine, OpenAPI, Bootstrap, Linux, nginx, Docker Compose, Spotify, Reddit  & Git, GitHub, IntelliJ, PyCharm \\
+    \custombold{Working knowledge} & Python, Java, JavaScript, SQL, Matlab & Flask, Polymer, App Engine, OpenAPI, Bootstrap, Linux, nginx, Docker Compose  & Git, GitHub, IntelliJ, PyCharm \\
     \hline
-    \custombold{Basic knowledge} & C++, Assembly, Prolog & Java Spark, RobotOS, Mindstorms NXT & Visual Studio \\
+    \custombold{Experience} & C++, Assembly, Prolog & Java Spark, RobotOS, Mindstorms NXT & Visual Studio
 \end{tabulary} 
 
 \end{minipage} 
