Move links section to bottom; combine platforms + tools

--- a/single-page/source/resume.tex
+++ b/single-page/source/resume.tex
@@ -51,17 +51,6 @@
 \sectionsep
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%     LINKS
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-\section{Links} 
-Github: \href{https://github.com/leonoverweel}{\custombold{/leonoverweel}} \\
-Twitter: \href{https://twitter.com/layon_overwhale}{\custombold{@LayOn\_OverWhale}} \\
-LinkedIn: \href{https://www.linkedin.com/in/leonoverweel}{\custombold{/leonoverweel}} \\
-Full CV: \href{https://leonoverweel.github.io/resume/}{\custombold{leonoverweel.github.io/resume}} \\
-\sectionsep
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %     COURSEWORK
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -123,6 +112,17 @@ Probability Theory \& Statistics
 
 (TA) = Teaching Assistant \\
 (CM) = Created free Course Materials
+\sectionsep
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%     LINKS
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\section{Links} 
+Github: \href{https://github.com/leonoverweel}{\custombold{/leonoverweel}} \\
+Twitter: \href{https://twitter.com/layon_overwhale}{\custombold{@LayOn\_OverWhale}} \\
+LinkedIn: \href{https://www.linkedin.com/in/leonoverweel}{\custombold{/leonoverweel}} \\
+Full CV: \href{https://leonoverweel.github.io/resume/}{\custombold{leonoverweel.github.io/resume}} \\
 %\sectionsep
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -214,12 +214,13 @@ All project titles link to more info! More projects here: \href{http://leonoverw
 
 \section{Technical Skills}
 \vspace{-\topsep}
-\begin{tabulary}{\linewidth}{LLLL}
-    & \custombold{Languages} & \custombold{Platforms} & \custombold{Tools} \\
+\settowidth\tymin{\custombold{Some experience}}
+\begin{tabulary}{\linewidth}{LLL}
+    & \custombold{Languages} & \custombold{Platforms + Tools} \\
     \hline
-    \custombold{Working knowledge} & Python, Java, JavaScript, SQL, Matlab & Flask, Polymer, App Engine, OpenAPI, Bootstrap, Linux, nginx, Docker Compose  & Git, GitHub, IntelliJ, PyCharm \\
+    \custombold{Working knowledge} & Python, Java, JavaScript, SQL, Matlab & Flask, Polymer, App Engine, OpenAPI, Bootstrap, Linux, nginx, Docker Compose, Git, GitHub, IntelliJ, PyCharm \\
     \hline
-    \custombold{Experience} & C++, Assembly, Prolog & Java Spark, RobotOS, Mindstorms NXT & Visual Studio
+    \custombold{Some experience} & C++, Assembly, Prolog & Java Spark, RobotOS, Mindstorms NXT, Visual Studio
 \end{tabulary} 
 
 \end{minipage} 
