Add UoE coursework and remove RHS

--- a/single-page/source/resume.tex
+++ b/single-page/source/resume.tex
@@ -30,7 +30,29 @@
 
 \subsection{University of Edinburgh}
 \descript{MSc Artificial Intelligence}
-\location{Starting Sept. 2018 | Edinburgh, UK}
+\location{Sept. 2018 - Today | Edinburgh, UK}
+
+\vspace{0.2\topsep}
+Coursework:
+\begin{small}
+\vspace{0.2\topsep}
+
+\custombold{Semester 1:}
+Machine Learning and Pattern Recognition \textbullet \
+Algorithmic Foundations of Data Science \textbullet \
+Social and Technological Networks
+\vspace{0.3\topsep}
+
+\custombold{Semester 2:}
+Reinforcement Learning \textbullet \
+Natural Language Understanding, Generation, and Machine Translation \textbullet \
+Innovation-driven Entrepreneurship
+\vspace{0.3\topsep}
+
+\custombold{Full Year:}
+Machine Learning Practical
+
+\end{small}
 \vspace{\topsep}
 
 \subsection{Delft University of \newline Technology}
@@ -41,77 +63,61 @@
     \item Graduated cum laude
     \item Completed the Honours Programme
     \item Studied abroad at the National University of Singapore
+    \item 8.6/10 final GPA; 9.0/10 BSc thesis
 \end{tightemize}
-\location{8.6 / 10 final GPA}
-\location{9.0 / 10 BSc thesis}
-\vspace{\topsep}
 
-\subsection{Rye High School}
-\location{2011 - 2015 | Rye, NY}
-\sectionsep
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%     COURSEWORK
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-\section{Coursework}
-\custombold{Intelligence Systems:}
+\vspace{0.2\topsep}
+Coursework:
 \begin{small}
+\vspace{0.2\topsep}
+
+\custombold{Intelligence Systems:}
 Logic-Based Artificial Intelligence \textbullet \
 Multi-Agent Systems Project \textbullet \
 Signal + Image Processing \textbullet \
 Multimedia Analysis (CM) \textbullet \
 Machine Learning \textbullet \
 Natural Language Processing
-\vspace{0.8\topsep}
-\end{small}
+\vspace{0.3\topsep}
 
 \custombold{Computer Systems:}
-\begin{small}
 Computer Organization (TA, CM) \textbullet \
 Computer Networks
-\vspace{0.8\topsep}
-\end{small}
+\vspace{0.3\topsep}
 
 \custombold{Information Systems:}
-\begin{small}
 Web \& Database Technology (CM) \textbullet \
 Information \& Data Modeling \textbullet \
 Computer Security
-\vspace{0.8\topsep}
-\end{small}
+\vspace{0.3\topsep}
 
 \custombold{Software Development:}
-\begin{small}
 Object Oriented Programming + Project \textbullet \
 Algorithms \& Data Structures (CM) \textbullet \
 Software Quality \& Testing \textbullet \
 Software Engineering Methods \textbullet \
 Concept of Programming Languages \textbullet \
 Contextproject
-\vspace{0.8\topsep}
-\end{small}
+\vspace{0.3\topsep}
 
 \custombold{Fundamentals:}
-\begin{small}
 Reasoning and Logic (CM) \textbullet \
 Algorithm Design \textbullet \
 Automata, Languages \& Computability \textbullet \
 Optimization Algorithms
-\vspace{0.8\topsep}
-\end{small}
+\vspace{0.3\topsep}
 
 \custombold{Math \& Modeling:}
-\begin{small}
 Computer Graphics \textbullet \
 Calculus (CM) \textbullet \
 Linear Algebra (TA, CM) \textbullet \
 Probability Theory \& Statistics
-\vspace{0.8\topsep}
-\end{small}
+\vspace{0.3\topsep}
 
 (TA) = Teaching Assistant \\
 (CM) = Created free Course Materials
+
+\end{small}
 \sectionsep
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -218,7 +224,7 @@ All project titles link to more info! More projects here: \href{http://leonoverw
 \begin{tabulary}{\linewidth}{LLL}
     & \custombold{Languages} & \custombold{Platforms + Tools} \\
     \hline
-    \custombold{Working knowledge} & Python, Java, JavaScript, SQL, Matlab & Flask, Polymer, App Engine, OpenAPI, Bootstrap, Linux, nginx, Docker Compose, Git, GitHub, IntelliJ, PyCharm \\
+    \custombold{Working knowledge} & Python, Java, JavaScript, SQL, Matlab & Flask, Polymer, App Engine, OpenAPI, Bootstrap, Linux, nginx, Docker, Docker Compose, Git, GitHub, IntelliJ, PyCharm \\
     \hline
     \custombold{Some experience} & C++, Assembly, Prolog & Java Spark, RobotOS, Mindstorms NXT, Visual Studio
 \end{tabulary} 
