Add IRR and IPP to UoE coursework

--- a/single-page/source/resume.tex
+++ b/single-page/source/resume.tex
@@ -40,17 +40,21 @@ Coursework:
 \custombold{Semester 1:}
 Machine Learning and Pattern Recognition \textbullet \
 Algorithmic Foundations of Data Science \textbullet \
-Social and Technological Networks
+Social and Technological Networks \textbullet \
+Inf. Research Review \textbullet \
+ML Practical
 \vspace{0.3\topsep}
 
 \custombold{Semester 2:}
 Reinforcement Learning \textbullet \
 Natural Language Understanding, Generation, and Machine Translation \textbullet \
-Innovation-driven Entrepreneurship
+Innovation-driven Entrepreneurship \textbullet \
+Inf. Project Proposal \textbullet \
+ML Practical (cont.)
 \vspace{0.3\topsep}
 
-\custombold{Full Year:}
-Machine Learning Practical
+\custombold{Summer:}
+MSc Thesis
 
 \end{small}
 \vspace{\topsep}
