--- a/single-page/source/resume.tex
+++ b/single-page/source/resume.tex
@@ -199,7 +199,7 @@ All project titles link to more info! More projects here: \href{http://leonoverw
 
 \begin{tightemize}
     \item \href{http://hackathonlist.nl/}{\custombold{Dutch Hackathon List}} (2017): Collaboratively building the most comprehensive list of upcoming hackathons in the Netherlands.
-    \item \href{http://leonoverweel.com/world-port-hackathon-2016}{\custombold{PassPort}} (2016): Blockchain app to detect smuggling in freight containers; 1st-place at World Port Hackathon; presented at I Am Blockchain and BECON conferences; extended into 10-week project at TU Delft.
+    \item \href{http://leonoverweel.com/world-port-hackathon-2016}{\custombold{PassPort}} (2016): Blockchain app to detect container smuggling; 1st-place at World Port Hackathon; presented at several blockchain conferences; extended into 10-week project at TU Delft; paper published in EUSSET.
     \item \href{http://leonoverweel.com/intersect.ninja}{\custombold{Intersect.Ninja}} (2015): Find intersections in the artists and songs different people like, based on their public Spotify playlists.
     \item \href{http://leonoverweel.com/link-syncer}{\custombold{Link Syncer}} (2015): Shareable links that redirect once everyone has clicked. \item \href{http://leonoverweel.com/reddit-weekly}{\custombold{Reddit Weekly}} (2015): Customizable weekly summary emails for subreddits.
 \end{tightemize}
