Update UoE coursework
Drop AFDS and add EXC

--- a/single-page/source/resume.tex
+++ b/single-page/source/resume.tex
@@ -39,18 +39,18 @@ Coursework:
 
 \custombold{Semester 1:}
 Machine Learning and Pattern Recognition \textbullet \
-Algorithmic Foundations of Data Science \textbullet \
+Extreme Computing \textbullet \
 Social and Technological Networks \textbullet \
-Inf. Research Review \textbullet \
-ML Practical
+Informatics Research Review \textbullet \
+Machine Learning Practical
 \vspace{0.3\topsep}
 
 \custombold{Semester 2:}
 Reinforcement Learning \textbullet \
 Natural Language Understanding, Generation, and Machine Translation \textbullet \
 Innovation-driven Entrepreneurship \textbullet \
-Inf. Project Proposal \textbullet \
-ML Practical (cont.)
+Informatics Project Proposal \textbullet \
+Machine Learning Practical (cont.)
 \vspace{0.3\topsep}
 
 \custombold{Summer:}
