Add UoE semester 1 updates to single-page resume

--- a/single-page/source/resume.tex
+++ b/single-page/source/resume.tex
@@ -21,7 +21,7 @@
 %     COLUMN ONE
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{minipage}[t]{0.33\textwidth} 
+\begin{minipage}[t]{0.32\textwidth} 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %     EDUCATION
@@ -30,31 +30,30 @@
 
 \subsection{University of Edinburgh}
 \descript{MSc Artificial Intelligence}
-\location{Sept. 2018 - Today | Edinburgh, UK}
+\location{Sep. 2018 - Aug. 2019 | Edinburgh, UK}
 
 \vspace{0.2\topsep}
-Coursework:
-\begin{small}
+Coursework: \begin{small}(Semester 1 completed)
 \vspace{0.2\topsep}
 
 \custombold{Semester 1:}
 Machine Learning and Pattern Recognition \textbullet \
 Extreme Computing \textbullet \
 Social and Technological Networks \textbullet \
-Informatics Research Review \textbullet \
-Machine Learning Practical
+Inf. Research Review \textbullet \
+ML Practical
 \vspace{0.3\topsep}
 
 \custombold{Semester 2:}
 Reinforcement Learning \textbullet \
 Natural Language Understanding, Generation, and Machine Translation \textbullet \
 Innovation-driven Entrepreneurship \textbullet \
-Informatics Project Proposal \textbullet \
-Machine Learning Practical (cont.)
+Inf. Project Proposal \textbullet \
+ML Practical (cont.)
 \vspace{0.3\topsep}
 
 \custombold{Summer:}
-MSc Thesis
+MSc Thesis: will research transfer learning for fraud prediction at \href{https://www.adyen.com/}{\custombold{Adyen}}.
 
 \end{small}
 \vspace{\topsep}
@@ -64,8 +63,7 @@ MSc Thesis
 \location{2015 - 2018 | Delft, NL}
 \vspace{\topsep}
 \begin{tightemize}
-    \item Graduated cum laude
-    \item Completed the Honours Programme
+    \item Graduated cum laude with honours
     \item Studied abroad at the National University of Singapore
     \item 8.6/10 final GPA; 9.0/10 BSc thesis
 \end{tightemize}
@@ -119,7 +117,7 @@ Probability Theory \& Statistics
 \vspace{0.3\topsep}
 
 (TA) = Teaching Assistant \\
-(CM) = Created free Course Materials
+(CM) = created free Course Materials
 
 \end{small}
 \sectionsep
@@ -130,7 +128,7 @@ Probability Theory \& Statistics
 
 \section{Links} 
 Github: \href{https://github.com/leonoverweel}{\custombold{/leonoverweel}} \\
-Twitter: \href{https://twitter.com/layon_overwhale}{\custombold{@LayOn\_OverWhale}} \\
+Twitter: \href{https://twitter.com/layon_overwhale}{\custombold{@layon\_overwhale}} \\
 LinkedIn: \href{https://www.linkedin.com/in/leonoverweel}{\custombold{/leonoverweel}} \\
 Full CV: \href{https://leonoverweel.github.io/resume/}{\custombold{leonoverweel.github.io/resume}} \\
 %\sectionsep
@@ -158,7 +156,7 @@ Full CV: \href{https://leonoverweel.github.io/resume/}{\custombold{leonoverweel.
 \begin{tightemize}
     \item Worked in a four-student team to create Mapp, an internal tool for customer journey mapping at \href{https://www.ing.com/}{\custombold{ING}}, as our BSc graduation project.
     \item Focused on finding product-market fit by shipping the Java + Polymer web app in two-week sprints and getting user feedback constantly.
-    \item Users love Mapp and we are working to deploy the app throughout ING.
+    \item Users love Mapp and ING is currently trialing its company-wide deployment.
 \end{tightemize}
 \vspace{0.5\topsep}
 
@@ -166,7 +164,7 @@ Full CV: \href{https://leonoverweel.github.io/resume/}{\custombold{leonoverweel.
 \descript{| OpenDC Product Lead; Student Researcher }
 \location{June 2016 – July 2018 | Delft, NL}
 \begin{tightemize}
-    \item Worked in the \href{https://atlarge-research.com/}{\custombold{@Large Research}} group to build \href{https://opendc.ewi.tudelft.nl/}{\custombold{OpenDC}}: a free, open-source datacenter simulator for research and university-level education.
+    \item Worked in the \href{https://atlarge-research.com/}{\custombold{@Large Research}} group to build \href{https://opendc.org}{\custombold{OpenDC}}: a free, open-source datacenter simulator for research and university-level education.
     \item Leadership resp's: sprint planning, conference talks, and teaching classes.
     \item Engineering resp's: database + API design and Python web server development.
     \item Post-Product Lead, I ran a nine-month study of cloud provider availability.
@@ -177,17 +175,17 @@ Full CV: \href{https://leonoverweel.github.io/resume/}{\custombold{leonoverweel.
 \descript{| Co-Founder, Chief Hacker Experience }
 \location{August 2016 – June 2017 | Delft, NL}
 \begin{tightemize}
-    \item Organized \href{https://hackdelft.com/}{\custombold{HackDelft}} '17, the first edition of TU Delft's hackathon.
+    \item Organized \href{https://2017.hackdelft.nl/}{\custombold{HackDelft}} '17, the first edition of TU Delft's annual hackathon.
     \item Resp's: HackDelft’s jury and keynote speaker, @HackDelft twitter account, working with Major League Hacking, and general ``hacker experience.''
 \end{tightemize}
 \vspace{0.5\topsep}
 
-\runsubsection{Mugsy}
-\descript{| Software Engineering Intern }
-\location{May 2015 – July 2015 | New York, NY}
-\begin{tightemize}
-    \item Full stack developed the \href{http://mugsy.tv/}{\custombold{Mugsy website}} with a custom CMS to add, edit, and remove multiple types of content pages.
-\end{tightemize}
+%\runsubsection{Mugsy}
+%\descript{| Software Engineering Intern }
+%\location{May 2015 – July 2015 | New York, NY}
+%\begin{tightemize}
+%    \item Full stack developed the %\href{http://mugsy.tv/}{\custombold{Mugsy website}} with a custom CMS to add, edit, and remove multiple types of content pages.
+%\end{tightemize}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %     PROJECTS
@@ -195,13 +193,15 @@ Full CV: \href{https://leonoverweel.github.io/resume/}{\custombold{leonoverweel.
 
 \section{Personal Projects}
 
-All project titles link to more info! More projects here: \href{http://leonoverweel.com/}{\custombold{leonoverweel.com}}
+All project titles link to more info! More previous projects here: \href{http://leonoverweel.com/}{\custombold{leonoverweel.com}}
 
 \begin{tightemize}
+    \item \href{https://www.getrevue.co/profile/dynamically-typed}{\custombold{Dynamically Typed}} (2019): Bi-weekly newsletter on AI products and ML tech.
+    \item \href{https://weekly.cool}{\custombold{Weekly.Cool}} (2019): Subscription service for weekly email digests for reddit communities (subreddits); successfully launched and acquired paying users.
     \item \href{http://hackathonlist.nl/}{\custombold{Dutch Hackathon List}} (2017): Collaboratively building the most comprehensive list of upcoming hackathons in the Netherlands.
     \item \href{http://leonoverweel.com/world-port-hackathon-2016}{\custombold{PassPort}} (2016): Blockchain app to detect container smuggling; 1st-place at World Port Hackathon; presented at several blockchain conferences; extended into 10-week project at TU Delft; paper published in EUSSET.
     \item \href{http://leonoverweel.com/intersect.ninja}{\custombold{Intersect.Ninja}} (2015): Find intersections in the artists and songs different people like, based on their public Spotify playlists.
-    \item \href{http://leonoverweel.com/link-syncer}{\custombold{Link Syncer}} (2015): Shareable links that redirect once everyone has clicked. \item \href{http://leonoverweel.com/reddit-weekly}{\custombold{Reddit Weekly}} (2015): Customizable weekly summary emails for subreddits.
+    \item \href{http://leonoverweel.com/link-syncer}{\custombold{Link Syncer}} (2015): Shareable links that redirect once everyone has clicked. 
 \end{tightemize}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -228,9 +228,9 @@ All project titles link to more info! More projects here: \href{http://leonoverw
 \begin{tabulary}{\linewidth}{LLL}
     & \custombold{Languages} & \custombold{Platforms + Tools} \\
     \hline
-    \custombold{Working knowledge} & Python, Java, JavaScript, SQL, Matlab & Flask, Polymer, App Engine, OpenAPI, Bootstrap, Linux, nginx, Docker, Docker Compose, Git, GitHub, IntelliJ, PyCharm \\
+    \custombold{Working knowledge} & Python, Java, JavaScript, SQL & Numpy, scikit-learn, Compute Engine, App Engine, serverless, Flask, Polymer, OpenAPI, Linux, Docker, Git, GitHub, IntelliJ, PyCharm \\
     \hline
-    \custombold{Some experience} & C++, Assembly, Prolog & Java Spark, RobotOS, Mindstorms NXT, Visual Studio
+    \custombold{Some experience} & C++, Matlab, Assembly, Prolog & nginx, Java Spark, RobotOS, Mindstorms NXT, Visual Studio
 \end{tabulary} 
 
 \end{minipage} 
