Add ringvaart to single-page resume

--- a/single-page/source/resume.tex
+++ b/single-page/source/resume.tex
@@ -12,8 +12,9 @@
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \namesection{Leon}{Overweel}{
-    \urlstyle{same}\url{leonoverweel.com} |
-    \href{mailto:l.overweel@gmail.com}{l.overweel@gmail.com} | +31 6 1215 9303
+    \urlstyle{same}\url{leonoverweel.com} \ | \
+    \href{mailto:l.overweel@gmail.com}{l.overweel@gmail.com} \ | \
+    +31 6 1215 9303
 }
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -198,7 +199,8 @@ All project titles link to more info! More previous projects here: \href{http://
 \begin{tightemize}
     \item \href{https://www.getrevue.co/profile/dynamically-typed}{\custombold{Dynamically Typed}} (2019): Bi-weekly newsletter on AI products and ML tech.
     \item \href{https://weekly.cool}{\custombold{Weekly.Cool}} (2019): Subscription service for weekly email digests for reddit communities (subreddits); successfully launched and acquired paying users.
-    \item \href{http://hackathonlist.nl/}{\custombold{Dutch Hackathon List}} (2017): Collaboratively building the most comprehensive list of upcoming hackathons in the Netherlands.
+    \item \href{http://keihardroeien.nl/}{\custombold{Keihard voor Kika}} (2018): Formed a crew with three friends, learned to row, and rowed a 100km race in June, raising money for child cancer research.
+    \item \href{http://hackathonlist.nl/}{\custombold{Hackathonlist.nl}} (2017): Crowd-sourced list of Dutch hackathons.
     \item \href{http://leonoverweel.com/world-port-hackathon-2016}{\custombold{PassPort}} (2016): Blockchain app to detect container smuggling; 1st-place at World Port Hackathon; presented at several blockchain conferences; extended into 10-week project at TU Delft; paper published in EUSSET.
     \item \href{http://leonoverweel.com/intersect.ninja}{\custombold{Intersect.Ninja}} (2015): Find intersections in the artists and songs different people like, based on their public Spotify playlists.
     \item \href{http://leonoverweel.com/link-syncer}{\custombold{Link Syncer}} (2015): Shareable links that redirect once everyone has clicked. 
